lib/tools/orbit/test_output/pattern_matching.output
QStandardPaths: wrong permissions on runtime directory /run/user/1000/, 0755 instead of 0700
Flow compiler (3rd generation)

Processing 'orbit' on http server
done in 0.13s

tests/pattern_matching.orb: tests/pattern_matching.orb:12:5: Parse error
    }
    ^
app->exec() == 1
